--- a/examen.html
+++ b/examen.html
@@ -15,7 +15,7 @@
 	<div id="examenDiv">
 		<br/>
 		
-		<div id="titulo">Examen de Historia</div><img id="test" src="img/test1.png">
+		<div id="titulo">Examen de Historia</div><img id="loguillo" src="img/logo.png">
 		<div id="menu">
 			<ul id="enlaceExamen">
 				<li><a href="about.html"><b><u>Información</u></b></a></li>
