--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 			correctamente sumarán un punto y las contestadas incorrectamente no suma ni resta.</p> <p>Haciendo clic en el enlace podras acceder al examen.
 			</p>
 			
-	<img src="img/test1.png" alt="Examen tipo test">
+	<img src="img/logo.png">
 	<ul id="enlaceIndex">
 		<li><a id="lal" href="examen.html"><b>Examen</b></a></li>
 	</ul>
